--- a/.nx/workflows/custom-step.yaml
+++ b/.nx/workflows/custom-step.yaml
@@ -2,7 +2,4 @@ name: 'My Custom Step'
 description: 'this step does really cool stuff'
 definition:
   using: 'node'
-  main:
-    script: |
-      echo "hello there"
-      echo node -v
+  main: './test.js'
