--- a/.nx/workflows/custom-step.yaml
+++ b/.nx/workflows/custom-step.yaml
@@ -2,4 +2,5 @@ name: 'My Custom Step'
 description: 'this step does really cool stuff'
 definition:
   using: 'node'
-  main: './test.js'
+  main: '.nx/workflows/test.js'
+  post: '.nx/workflows/test.js'
