--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,4 @@ jobs:
       - run: git branch --track main origin/main
         if: ${{ github.event_name == 'pull_request' }}
 
-      - run: yarn nx-cloud record -- nx format:check
-      - run: yarn nx affected -t lint test build e2e-ci
+      - run: yarn nx affected -t lint test build e2e-ci --parallel=1
