test node version

--- a/.nx/workflows/agents.yaml
+++ b/.nx/workflows/agents.yaml
@@ -5,7 +5,21 @@ launch-templates:
     init-steps:
       - name: Checkout
         uses: 'nrwl/nx-cloud-workflows/v3.6/workflow-steps/checkout/main.yaml'
-      - uses: '.nx/workflows/custom-step.yaml'
+      - name: Install Node
+        script: |
+          node -v
+          # run nvm install script
+          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
+          # source the updated profile to get the nvm command available
+          source ~/.profile
+          # install the needed version of node via nvm
+          nvm install 21.7.3
+          # echo the current path (which now includes the nvm-provided version of node) to NX_CLOUD_ENV
+          echo "PATH=$PATH" >> $NX_CLOUD_ENV
+          node -v
+      - name: Print Node Version
+        script: |
+          node -v
       - name: Restore Node Modules Cache
         uses: 'nrwl/nx-cloud-workflows/v3.6/workflow-steps/cache/main.yaml'
         env:
@@ -17,8 +31,8 @@ launch-templates:
         env:
           KEY: 'package-lock.json|yarn.lock|pnpm-lock.yaml|"browsers"'
           PATHS: |
-            '../.cache/Cypress'
-            '../.cache/ms-playwright'
+            '~/.cache/Cypress'
+            '~/.cache/ms-playwright'
           BASE_BRANCH: 'main'
       - name: Install Node Modules
         uses: 'nrwl/nx-cloud-workflows/v3.6/workflow-steps/install-node-modules/main.yaml'
